--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style2.css">
 
-<script type="text/javascript">
-alert("this is an alert box!");
 
-</script>
 <style>
  h5{
    color: black;
@@ -389,7 +386,9 @@ html {
   background-position: -339px -107px;
   width: 57px;
 }
-
+a{
+  text-decoration-color: white;
+}
 </style>
 
 </head>
@@ -400,7 +399,7 @@ html {
 <i class="fa fa-file"></i>
 <i class="fa fa-bars"></i>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
           <img src="IMAGES/is.jpg" width="100" height="100" class="d-inline-block align-top" alt="7">
       <h1><a>Impulse cloths </a></h1> 
@@ -413,7 +412,7 @@ html {
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false" text-decoration-color="white">Profile</a>
         </li>
         <li class="nav-item">
         <a class="nav-link" href="Contact.html">Contacts</a>
@@ -442,130 +441,45 @@ html {
 
    </div>
   
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <ul class="nav nav-tabs">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              prom dresses
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <i class="glyphicon glyphicon-search"></i>
-              <a class="dropdown-item" href="#"></a><a href="long prom dresses.html">long prom dresses</a>
-              <a class="dropdown-item" href="#"></a><a href="short prom dresses.html">short prom dresses</a>
-              <a class="dropdown-item" href="#"></a><a href="mermaid prom dresses.html">mermaid prom dresses</a>
-              <i class="glyphicon glyphicon-search"></i>
-            </li>
+          <a class="nav-link" href="long prom dresses.html">Prom dresses</a>
+          </li>
         </ul>
         </li>
-        <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            wedding dresses
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <i class="glyphicon glyphicon-search"></i>
-              <a class="dropdown-item" href="#"></a><a href="2020 wedding dresses.html">2020 wedding dresses</a>
-              <a class="dropdown-item" href="#"></a><a href="short wedding dresses.html">short wedding dresses</a>
-              <a class="dropdown-item" href="#"></a><a href="luxury wedding dresses.html">luxury wedding dresses</a>
-              <i class="glyphicon glyphicon-search"></i>
-            </li>
-        </li>
-          </ul>
+       <li class="nav-item">
+          <a class="nav-link" href="2020 wedding dresses.html">wedding dresses</a>
+          </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="brides maid.html">Wedding party dresses</a>
+            </li>
+             <li class="nav-item">
+          <a class="nav-link" href="cocktail dresses.html">Special occassion dresses</a>
+          </li>
               <ul class="nav nav-tabs">
                 <li class="nav-item">
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      wedding party dresses
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <i class="glyphicon glyphicon-search"></i>
-                      <a class="dropdown-item" href="#"></a><a href="brides maid.html">Brides maid</a>
-                      <a class="dropdown-item" href="#"></a><a href="mother of bride.html">Mother of bride</a>
-
-                      <i class="glyphicon glyphicon-search"></i>
-                    </li>
-                </li>
+                  <a class="nav-link" href="earrings.html">Accesories</a>
+                  </li>
               </ul>
               <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          special occasion dresses
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <i class="glyphicon glyphicon-search"></i>
-                          <a class="dropdown-item" href="#"></a><a href="cocktail dresses.html">cocktail dresses</a>
-                          <a class="dropdown-item" href="#"></a><a href="formal dresses.html">formal dresses</a>
-                          <a class="dropdown-item" href="#"></a><a href="home coming dresses.html">home coming dresses</a>
-                          <i class="glyphicon glyphicon-search"></i>
-                        </li>
-                    </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="t-shirts.html">male fashion</a>
+                  </li>
               </ul>
-              <ul class="nav nav-tabs">
-          <li class="nav-item">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              accesories
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <i class="glyphicon glyphicon-search"></i>
-              <a class="dropdown-item" href="#"></a><a href="earrings.html">Earrings</a>
-              <a class="dropdown-item" href="#"></a><a href="wedding gloves.html">wedding gloves</a>
-              <a class="dropdown-item" href="#"></a><a href="handbags.html">handbags</a>
-              <a class="dropdown-item" href="#"></a><a href="necklace.html">necklace</a>
-              <a class="dropdown-item" href="#"></a><a href="glasses.html">Glasses</a>
-              <a class="dropdown-item" href="#"></a><a href="wedding rings.html">Wedding rings</a>
-              <i class="glyphicon glyphicon-search"></i>
-            </li>
-          </li>
-              </ul>
-              <ul class="nav nav-tabs">
-            <li class="nav-item">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  male fashion
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <i class="glyphicon glyphicon-search"></i>
-                  <a class="dropdown-item" href="#"></a><a href="t-shirts.html">t-shirts</a>
-                  <a class="dropdown-item" href="#"></a><a href="male shoe.html">male shoe</a>
-                  <a class="dropdown-item" href="#"></a><a href="watches.html">watches</a>
-                  <a class="dropdown-item" href="#"></a><a href="jeans.html">jeans</a>
-                  <a class="dropdown-item" href="#"></a><a href="hoodies.html">hoodies</a>
-                  <a class="dropdown-item" href="#"></a><a href="jackets.html">jackets</a>
-                  <a class="dropdown-item" href="#"></a><a href="hats.html">hats</a>
-                  <a class="dropdown-item" href="#"></a><a href="polo.html">polo</a>
-
-                  <i class="glyphicon glyphicon-search"></i>
-                </li>
-            </li>
-      </ul>
  
-      <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              female fashion
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <i class="glyphicon glyphicon-search"></i>
-              <a class="dropdown-item" href="#"></a><a href="female dress.html">female dress</a>
-              <a class="dropdown-item" href="#"></a><a href="female shoe.html">female shoe</a>
-              <a class="dropdown-item" href="#"></a><a href="body fit.html">body fit</a>
-              <a class="dropdown-item" href="#"></a><a href="wigs.html">wigs</a>
-
-              <i class="glyphicon glyphicon-search"></i>
-            </li>
-        </li>
-      </ul>
-      <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link" href="swimwear.html">Swim wears</a>
-          </li> 
-      </ul>
+              <ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a class="nav-link" href="female dress.html"> Female fashion</a>
+                  </li>
+              </ul>
+              <ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a class="nav-link" href="swimwear.html">Swimwears</a>
+                  </li>
+              </ul>
     </nav>
     
      
