--- a/sign up.html
+++ b/sign up.html
@@ -164,7 +164,7 @@ button:hover {
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="ini.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
         <li class="nav-item">
           <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
@@ -188,7 +188,7 @@ button:hover {
 
 
 
-<form action="ini.html" style="border:1px solid #ccc">
+<form action="ini.html" style="border:1px solid #4CAF50">
   <div class="container">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
@@ -211,7 +211,7 @@ button:hover {
 
     <div class="clearfix">
       <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn"><a href="ini.html">Sign Up</a></button>
+      <button type="submit" class="signupbtn"><a href="index.html">Sign Up</a></button>
     </div>
   </div>
 </form>
